--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ a, a:visited {
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="checkbox"],
 button,
 textarea {
   font-family: 'Nunito', sans-serif;
@@ -67,7 +66,7 @@ button {
   margin-top: 1rem;
 }
 
-button {
+button.auth_button {
   padding: 0.5rem;
   background-color: #0a3e46a8;
   border-color: #00191c;
@@ -75,7 +74,7 @@ button {
   color: #000e11;
 }
 
-button:hover {
+button.auth_button:hover {
     padding: 0.5rem;
     transform: scale(1.05);
   }
@@ -177,10 +176,10 @@ nav.burger_navigation {
 
 .burger-menu {
     position: fixed;
-    width: 100vw;
+    width: 20vw;
     height: 100vh;
     top: 50px;
-    left: 70%; 
+    right: 0;
     transform: translateX(100%);
     transition: all 0.2s;
 }
@@ -190,7 +189,6 @@ nav.burger_navigation {
 }
 
 .menu_content {
-    width: 30%;
     height: 100%;
     background-color: #7ab5bb;
     display: flex;
@@ -222,7 +220,7 @@ ul.burger_links li {
     list-style: none;
 }
 
-.profile_form {
+form.profile_form {
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -232,10 +230,23 @@ ul.burger_links li {
     padding-bottom: 1rem;
 }
 
-.profile_form > label {
-    margin-right: 10px;
-    padding-right: .5em;
+.profile_form_field {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
 }
-form.profile_form input {
-    flex: 1;
+.profile_form_field > label {
+   margin-right: 20px;
+}
+
+button.profile_button {
+    margin-right: 20px;
+    background-color: #0a3e46a8;
+    border-color: #00191c;
+    font-weight: bold;
+    color: #000e11;
+}
+
+button.profile_button:hover {
+    transform: scale(1.02);
 }
